--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,22 @@
         android:theme="@style/Theme.EasyNotes"
         tools:targetApi="31">
         <activity
+            android:name=".SplashScreen"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".NotesTaker"
-            android:theme="@style/Theme.EasyNotes.NoActionBar"
-            android:exported="false">
+            android:exported="false"
+            android:theme="@style/Theme.EasyNotes.NoActionBar">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
